crates/unsoundness_checker/tests/snapshots/typing_any_used/markdown_test__snippet_04.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: output
---
error[typing-any-used]: Using `typing.Any` in type annotations can lead to runtime errors.
 --> snippet_04.py:3:28
  |
1 | from typing import Any
2 |
3 | def calculate_total(items: Any) -> int:
  |                            ^^^
4 |     return sum(item for item in items)
  |
info: rule `typing-any-used` was selected in the configuration file
